k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: waheeb4/database-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: database-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: database-storage
          persistentVolumeClaim:
            claimName: database-pvc
